force-app/main/default/objects/Incentive_Configuration__c/Incentive_Configuration__c.object-meta.xml
<CustomObject>
    <description>Org-level configuration for the Incentives module.</description>
    <label>Incentive Configuration</label>
    <nameField><label>Incentive Configuration Name</label><type>Text</type></nameField>
    <pluralLabel>Incentive Configurations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>