force-app/main/default/objects/Incentive_Configuration__c/fields/Attainment_Recompute_Scope__c.field-meta.xml
<CustomField>
    <fullName>Attainment_Recompute_Scope__c</fullName>
    <description>Controls how far attainment ripple recomputation travels. Default: Participant_Period.</description>
    <label>Attainment Recompute Scope</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Current_Deal_Only</fullName><default>false</default><label>Current Deal Only</label></value>
            <value><fullName>Participant_Period</fullName><default>false</default><label>Participant Period</label></value>
            <value><fullName>Participant_Annual</fullName><default>false</default><label>Participant Annual</label></value>
            <value><fullName>Pool_Period</fullName><default>false</default><label>Pool Period</label></value>
            <value><fullName>Manual_Only</fullName><default>false</default><label>Manual Only</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>