force-app/main/default/objects/Incentive_Configuration__c/fields/Calculation_Precision__c.field-meta.xml
<CustomField>
    <fullName>Calculation_Precision__c</fullName>
    <label>Calculation Precision</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Round_To_Cent</fullName><default>false</default><label>Round To Cent</label></value>
            <value><fullName>Round_To_Dollar</fullName><default>false</default><label>Round To Dollar</label></value>
            <value><fullName>Full_Precision</fullName><default>false</default><label>Full Precision</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>