force-app/main/default/objects/Incentive_Configuration__c/fields/Commission_Currency__c.field-meta.xml
<CustomField>
    <fullName>Commission_Currency__c</fullName>
    <label>Commission Currency</label>
    <type>Text</type>
    <length>5</length>
</CustomField>