force-app/main/default/objects/Incentive_Configuration__c/fields/Default_Attainment_Period__c.field-meta.xml
<CustomField>
    <fullName>Default_Attainment_Period__c</fullName>
    <label>Default Attainment Period</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Monthly</fullName><default>false</default><label>Monthly</label></value>
            <value><fullName>Quarterly</fullName><default>false</default><label>Quarterly</label></value>
            <value><fullName>Semi_Annual</fullName><default>false</default><label>Semi Annual</label></value>
            <value><fullName>Annual</fullName><default>false</default><label>Annual</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>