force-app/main/default/objects/Incentive_Configuration__c/fields/Default_Exit_Draw_Recovery__c.field-meta.xml
<CustomField>
    <fullName>Default_Exit_Draw_Recovery__c</fullName>
    <label>Default Exit Draw Recovery</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Write_Off</fullName><default>false</default><label>Write Off</label></value>
            <value><fullName>Deduct_From_Final</fullName><default>false</default><label>Deduct From Final</label></value>
            <value><fullName>Collections</fullName><default>false</default><label>Collections</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>