force-app/main/default/objects/Incentive_Configuration__c/fields/Default_Exit_Grace_Days__c.field-meta.xml
<CustomField>
    <fullName>Default_Exit_Grace_Days__c</fullName>
    <label>Default Exit Grace Days</label>
    <type>Number</type>
    <precision>3</precision>
    <scale>0</scale>
</CustomField>