force-app/main/default/objects/Incentive_Configuration__c/fields/Default_Exit_Projected_Policy__c.field-meta.xml
<CustomField>
    <fullName>Default_Exit_Projected_Policy__c</fullName>
    <label>Default Exit Projected Policy</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Forfeit</fullName><default>false</default><label>Forfeit</label></value>
            <value><fullName>Pay_Through_Close</fullName><default>false</default><label>Pay Through Close</label></value>
            <value><fullName>Pay_All</fullName><default>false</default><label>Pay All</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>