force-app/main/default/objects/Incentive_Configuration__c/fields/Default_Exit_Vesting_Policy__c.field-meta.xml
<CustomField>
    <fullName>Default_Exit_Vesting_Policy__c</fullName>
    <label>Default Exit Vesting Policy</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Forfeit_Unvested</fullName><default>false</default><label>Forfeit Unvested</label></value>
            <value><fullName>Accelerate</fullName><default>false</default><label>Accelerate</label></value>
            <value><fullName>Continue</fullName><default>false</default><label>Continue</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>