force-app/main/default/objects/Incentive_Configuration__c/fields/Default_Trigger_Type__c.field-meta.xml
<CustomField>
    <fullName>Default_Trigger_Type__c</fullName>
    <label>Default Trigger Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Booking</fullName><default>false</default><label>Booking</label></value>
            <value><fullName>Collection</fullName><default>false</default><label>Collection</label></value>
            <value><fullName>Milestone</fullName><default>false</default><label>Milestone</label></value>
            <value><fullName>Revenue_Recognition</fullName><default>false</default><label>Revenue Recognition</label></value>
            <value><fullName>Renewal_Date</fullName><default>false</default><label>Renewal Date</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>