force-app/main/default/objects/Incentive_Configuration__c/fields/Draw_Policy__c.field-meta.xml
<CustomField>
    <fullName>Draw_Policy__c</fullName>
    <label>Draw Policy</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Recoverable</fullName><default>false</default><label>Recoverable</label></value>
            <value><fullName>Non_Recoverable</fullName><default>false</default><label>Non Recoverable</label></value>
            <value><fullName>None</fullName><default>false</default><label>None</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>