force-app/main/default/objects/Incentive_Configuration__c/fields/Eligibility_Watch_Fields__c.field-meta.xml
<CustomField>
    <fullName>Eligibility_Watch_Fields__c</fullName>
    <description>Comma-separated Opportunity field API names to monitor for eligibility changes. Include value-source fields from Commissionable_Value_Map. e.g., Commission_Eligible__c,Booking_Type__c,Gross_Commissionable_Value__c</description>
    <label>Eligibility Watch Fields</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>