force-app/main/default/objects/Incentive_Configuration__c/fields/Industry__c.field-meta.xml
<CustomField>
    <fullName>Industry__c</fullName>
    <label>Industry</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>SaaS</fullName><default>false</default><label>SaaS</label></value>
            <value><fullName>Insurance</fullName><default>false</default><label>Insurance</label></value>
            <value><fullName>Financial_Services</fullName><default>false</default><label>Financial Services</label></value>
            <value><fullName>Real_Estate</fullName><default>false</default><label>Real Estate</label></value>
            <value><fullName>Manufacturing</fullName><default>false</default><label>Manufacturing</label></value>
            <value><fullName>Telecommunications</fullName><default>false</default><label>Telecommunications</label></value>
            <value><fullName>Healthcare_IT</fullName><default>false</default><label>Healthcare IT</label></value>
            <value><fullName>Retail</fullName><default>false</default><label>Retail</label></value>
            <value><fullName>Other</fullName><default>false</default><label>Other</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>