force-app/main/default/objects/Incentive_Configuration__c/fields/Lost_Stages__c.field-meta.xml
<CustomField>
    <fullName>Lost_Stages__c</fullName>
    <description>Comma-separated Opportunity Stage values considered "Lost". Triggers clawback evaluation if commissions were already processed. Default: "Closed Lost".</description>
    <inlineHelpText>Comma-separated stage names. e.g., "Closed Lost,Cancelled,Withdrawn"</inlineHelpText>
    <label>Lost Stages</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>