force-app/main/default/objects/Incentive_Configuration__c/fields/Owner_Change_Policy__c.field-meta.xml
<CustomField>
    <fullName>Owner_Change_Policy__c</fullName>
    <description>What happens to commissions when Opportunity owner changes.</description>
    <label>Owner Change Policy</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Credit_Stays_With_Closer</fullName><default>false</default><label>Credit Stays With Closer</label></value>
            <value><fullName>Credit_Transfers</fullName><default>false</default><label>Credit Transfers</label></value>
            <value><fullName>Admin_Review_Required</fullName><default>false</default><label>Admin Review Required</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>