force-app/main/default/objects/Incentive_Configuration__c/fields/Payment_Cadence__c.field-meta.xml
<CustomField>
    <fullName>Payment_Cadence__c</fullName>
    <label>Payment Cadence</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Monthly</fullName><default>false</default><label>Monthly</label></value>
            <value><fullName>Semi_Monthly</fullName><default>false</default><label>Semi Monthly</label></value>
            <value><fullName>Bi_Weekly</fullName><default>false</default><label>Bi Weekly</label></value>
            <value><fullName>Quarterly</fullName><default>false</default><label>Quarterly</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>