force-app/main/default/objects/Incentive_Configuration__c/fields/Payroll_Retention_Years__c.field-meta.xml
<CustomField>
    <fullName>Payroll_Retention_Years__c</fullName>
    <label>Payroll Retention Years</label>
    <type>Number</type>
    <precision>2</precision>
    <scale>0</scale>
</CustomField>