force-app/main/default/objects/Incentive_Configuration__c/fields/Plan_Rollover_Policy__c.field-meta.xml
<CustomField>
    <fullName>Plan_Rollover_Policy__c</fullName>
    <label>Plan Rollover Policy</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Clone_And_Modify</fullName><default>false</default><label>Clone And Modify</label></value>
            <value><fullName>New_Each_Year</fullName><default>false</default><label>New Each Year</label></value>
            <value><fullName>Evergreen</fullName><default>false</default><label>Evergreen</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>