force-app/main/default/objects/Incentive_Configuration__c/fields/Probability_Threshold__c.field-meta.xml
<CustomField>
    <fullName>Probability_Threshold__c</fullName>
    <description>Default probability threshold for commission eligibility. Deals must reach this probability to qualify. Used by PROBABILITY_CHANGED event routing. Default: 100 (for Services deals gated on Probability=100).</description>
    <label>Probability Threshold</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>