force-app/main/default/objects/Incentive_Configuration__c/fields/Quota_Credit_Watch_Fields__c.field-meta.xml
<CustomField>
    <fullName>Quota_Credit_Watch_Fields__c</fullName>
    <description>Comma-separated Opportunity field API names used for quota credit. Changes to these fields trigger attainment recomputation. e.g., ACV__c,Net_Revenue__c</description>
    <label>Quota Credit Watch Fields</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>