force-app/main/default/objects/Incentive_Configuration__c/fields/Role_Switch_Policy__c.field-meta.xml
<CustomField>
    <fullName>Role_Switch_Policy__c</fullName>
    <label>Role Switch Policy</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Clean_Slate</fullName><default>false</default><label>Clean Slate</label></value>
            <value><fullName>Carry_Forward</fullName><default>false</default><label>Carry Forward</label></value>
            <value><fullName>Prorated</fullName><default>false</default><label>Prorated</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>