force-app/main/default/objects/Incentive_Configuration__c/fields/Territory_Field__c.field-meta.xml
<CustomField>
    <fullName>Territory_Field__c</fullName>
    <description>Which Opportunity field holds territory assignment. e.g., Territory2Id or Custom_Territory__c</description>
    <label>Territory Field</label>
    <length>100</length>
    <type>Text</type>
</CustomField>