force-app/main/default/objects/Incentive_Configuration__c/fields/Trace_Retention_Years__c.field-meta.xml
<CustomField>
    <fullName>Trace_Retention_Years__c</fullName>
    <label>Trace Retention Years</label>
    <type>Number</type>
    <precision>2</precision>
    <scale>0</scale>
</CustomField>