force-app/main/default/objects/Incentive_Configuration__c/fields/Use_Dated_Exchange_Rates__c.field-meta.xml
<CustomField>
    <fullName>Use_Dated_Exchange_Rates__c</fullName>
    <label>Use Dated Exchange Rates</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>