force-app/main/default/objects/Incentive_Configuration__c/fields/Won_Stages__c.field-meta.xml
<CustomField>
    <fullName>Won_Stages__c</fullName>
    <description>Comma-separated Opportunity Stage values that are considered "Won" for commission purposes. Orgs may have "Closed Won", "Booked", "Contract Signed", "Funded", etc. Captured during onboarding wizard. Default: "Closed Won".</description>
    <inlineHelpText>Comma-separated stage names that trigger commission processing. e.g., "Closed Won,Booked,Contract Signed"</inlineHelpText>
    <label>Won Stages</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>